# ComputerVisionExercises

./: .gitignore  README.md
XGBoostHeadCTClassification/: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yaml  test.ipynb  training.ipynb
XGBoostHeadCTClassification/app/: config.py  main.py
XGBoostHeadCTClassification/app/api/v1/endpoints/: predict.py
XGBoostHeadCTClassification/app/core/: dependencies.py
XGBoostHeadCTClassification/app/schemas/: prediction.py
XGBoostHeadCTClassification/app/services/vision/: ResNetFeatureExtractor.py  XGBoostClassifier.py  baseClassifier.py  baseFeatureExtractor.py
XGBoostHeadCTClassification/models/: feature_extractor.pth  xgb_model.ubj
YOLODockerExercise/: .env.example  .gitignore  Dockerfile  README.md  environment.yml  requirements.txt
YOLODockerExercise/app/: config.py  main.py
YOLODockerExercise/app/api/v1/: router.py
YOLODockerExercise/app/api/v1/endpoints/: predict.py
YOLODockerExercise/app/core/: dependencies.py
YOLODockerExercise/app/schemas/: prediction.py
YOLODockerExercise/app/services/vision/: basePredictor.py  yoloPredictor.py
background_subtraction/: CMakeLists.txt  main.cpp
contour_detection/: CMakeLists.txt  main.cpp
simple_segmentation/: CMakeLists.txt  main.cpp
sketchMaker/: README.md  app.py  environment.yml  main.py  requirements.txt
sketchMaker/sketch_scripts/: basic_processing.py  pencilSketch.py  sepia.py
sketchMaker/views/: editor_view.py  select_view.py
test_opencv_cpp_project/: main.cpp
